experimenting with pyramid_google_login, have made changes to usr library

--- a/development.ini
+++ b/development.ini
@@ -6,8 +6,10 @@
 [app:main]
 use = egg:plotter
 
-persona.secret = sdajk3287781232rhjkaswasd89u23eniu123hr893
-persona.audiences = localhost:8080
+#persona.secret = sdajk3287781232rhjkaswasd89u23eniu123hr893
+#persona.audiences = localhost:8080
+security.google_login.client_id = 1044248525718-jfoomqus2i9p6h8sisldodg1dhc6fjtj.apps.googleusercontent.com
+security.google_login.client_secret = FXQ0fTetQngK3zeRO7Sd8hph
 
 
 pyramid.reload_templates = true
