new code working

--- a/production.ini
+++ b/production.ini
@@ -6,8 +6,9 @@
 [app:main]
 use = egg:plotter
 
-persona.secret = kj;lasdf76831tg64y7bh23rhjkqwedgvw5qe4y1354tfhn78
-persona.audiences = http://bioviz.rocq.inria.fr
+#pyramid.includes = pyramid_google_login
+security.google_login.client_id =  532435863603-7s950m1gt3h2ls8g3jm8kiqp419dpppp.apps.googleusercontent.com 
+security.google_login.client_secret =  kU9VH0ALE7nZmXV_QWi3H3d9 
 
 pyramid.reload_templates = false
 pyramid.debug_authorization = false
